# Incident-Commander

./: .env.example  .env.hackathon  .env.production.template  .gitignore  .pre-commit-config.yaml  100_PERCENT_READY_REPORT.md  3_MINUTE_RECORDING_OPTIMIZATION.md  ACTION_EXECUTION_FIX_SUMMARY.md  AGENTS.md  AMPLIFY_BUILD_FIX.md  AMPLIFY_DEPLOYMENT_GUIDE.md  AMPLIFY_GITHUB_SETUP.md  AMPLIFY_TROUBLESHOOTING.md  API.md  ARCHITECTURE.md  ARCHITECTURE_COMPARISON.md  AWS_DASHBOARD_DEPLOYMENT.json  AWS_DEPLOYMENT_CHALLENGES.md  CLOUDFRONT_SOLUTION_SUMMARY.md  COMPLETE_SUBMISSION_NOW.md  COMPONENT_IMPROVEMENTS_SUMMARY_OCT22.md  COMPREHENSIVE_STATUS_UPDATE_OCT21.md  CREDIBILITY_FIXES.md  CREDIBILITY_FIXES_APPLIED.md  DASHBOARD_COMPLETE.md  DASHBOARD_FEATURE_ANALYSIS.md  DASHBOARD_SETUP.md  DASHBOARD_UPDATE_SUMMARY.md  DASHBOARD_VALUE_IMPLEMENTATION_GUIDE.md  DEMO_ARCHITECTURE.md  DEMO_FILES_UPDATE_SUMMARY.md  DEMO_QUICK_REFERENCE.md  DEMO_VISUALS_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST_AND_ROLLBACK_PLAN.md  DEPLOYMENT_FINAL.md  DEPLOYMENT_QUICK_REFERENCE.md  DEPLOYMENT_STATUS_SUMMARY.md  DESIGN_DOCUMENT_UPDATE_SUMMARY.md  DEVELOPMENT_IMPROVEMENTS.md  (+135 more)
.serena/: project.yml
Research/: Market Research.md  competitive-study.md  competitive_landscape.csv  ecosystem_positioning.csv  incident_management_metrics.csv  key_research_studies.csv  market_gap_analysis.csv  quick-reference.md  roi_business_case.csv
agents/: __init__.py
archive/: ARCHIVE_INDEX.md  BUILD_SUMMARY.md  DASHBOARD_INTEGRATION_SUMMARY.md  HACKATHON_SUBMISSION_SUMMARY.md  LIVE_DEMO_GUIDE.md  MILESTONE_1_COMPLETE.md  MILESTONE_3_TASK_12_1_COMPLETE.md  REAL_BACKEND_COMPLETE.md  TASKS_16_17_18_COMPLETE.md  TASK_12_COMPLETE.md  TASK_13_COMPLETE.md  TASK_15_COMPLETE.md  hackathon_submission_package.md  hackathon_winner_analysis.md  milestone_2_completion_report.md  run_validation_script.py  test_dashboard.py  test_milestone2_agents.py  test_websocket.py
aws_dashboard/: index.html
claudedocs/: ALL_PHASES_COMPLETE_SUMMARY.md  AMPLIFY_FIX_7_PATH_RESOLUTION.md  CHANGES_REVIEW_AND_RECOMMENDATIONS.md  CLEANUP_EXECUTION_SUMMARY.md  CLEANUP_SUMMARY_20251023.md  CODEBASE_IMPROVEMENT_ANALYSIS_20251023.md  CODE_ANALYSIS_REPORT.md  CODE_FIXES_SUMMARY.md  COMPLETE_CLEANUP_SUMMARY.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPLETE_MIGRATION_SUCCESS_20251023.md  COMPLETE_PROJECT_CONSOLIDATION_ANALYSIS.md  COMPREHENSIVE_CODE_ANALYSIS.md  CONSOLIDATION_COMPLETE_SUMMARY.md  CONSOLIDATION_PLAN_PHASE2.md  CRITICAL_GAPS_PROGRESS.md  DEPENDENCY_UPDATE_20251023.md  DEPLOYMENT_SCRIPTS_ANALYSIS.md  DEPLOYMENT_STATUS_SUMMARY.md  DOCUMENTATION_CLEANUP_SUMMARY.md  IMPLEMENTATION_COMPLETION_SUMMARY.md  IMPLEMENTATION_STATUS_SUMMARY.md  JUDGE_GUIDE_UPDATE_SUMMARY.md  LINK_VERIFICATION_SUMMARY.md  MARKDOWN_ARCHIVE_RECOMMENDATIONS.md  MIGRATION_EXECUTION_COMPLETE_20251023.md  MIGRATION_STRATEGY_REACT19_NEXT16.md  PYTHON_CONSOLIDATION_PHASE1_COMPLETE.md  PYTHON_FILE_CONSOLIDATION_ANALYSIS.md  REPOSITORY_CLEANUP_PLAN.md  SESSION_SUMMARY_OCT22.md  VIDEO_RERECORDING_CHECKLIST.md  action_items_completion_summary.md  comprehensive_code_analysis_report.md  lambda_deployment_troubleshooting.md  react_18_upgrade_strategy.md  security_audit_dynamic_execution.md
dashboard/: .env.local.example  .eslintrc.json  DASHBOARD_ENHANCEMENT_SUMMARY.md  DASHBOARD_FEATURE_GAP_ANALYSIS.md  DASHBOARD_TEXT_UPDATE_SUMMARY.md  DASHBOARD_UX_IMPROVEMENTS_SUMMARY.md  ENHANCEMENT_IMPLEMENTATION_SUMMARY.md  HYDRATION_ERROR_FIX.md  OPS_DASHBOARD_IMPROVEMENTS.md  OPTIMIZATION_GUIDE.md  README.md  TRANSPARENCY_DASHBOARD_ENHANCEMENTS.md  VERTICAL_SPACING_OPTIMIZATION.md  action-all-suggestions.js  agent_actions_dashboard.html  amplify.yml  apply-optimizations.js  build.sh  comprehensive_demo_dashboard.html  jest.config.js  jest.setup.js  next.config.js  next.config.static.js  package-lock.json  package.json  refined_dashboard.html  show-transformation-summary.js  standalone.html  tailwind.config.js  test-dashboard.js  test-hydration-fix.js  tsconfig.json  tsconfig.tsbuildinfo  validate-css-consistency.js  validate-enhanced-transparency.js  value_dashboard.html
demo/: README.md  start_demo.py  start_simple.py  test_aws_integration.py  test_enhanced_recorder.py
demo_recordings/: COMPLETE_DASHBOARD_RECORDING_SUCCESS.md  FRESH_20251022_222039_COMPREHENSIVE_SUMMARY.json  FRESH_3_MINUTE_DEMO_SUMMARY.md  FRESH_RECORDING_COMPLETE_SUCCESS.md  INTERACTIVE_BUTTONS_SUCCESS.md  LATEST_RECORDING_SUMMARY_20251022.md  LATEST_RECORDING_SUMMARY_20251022_FINAL.md  MP4_CONVERSION_SUMMARY.md  POWER_DASHBOARD_SUCCESS_SUMMARY.md  RECORDING_SUMMARY_20251023_145602.md  RECORDING_SUMMARY_20251023_150143.md  RECORDING_SUMMARY_20251023_174118.md  RECORDING_SUMMARY_20251023_192254.md  RECORDING_SUMMARY_20251023_192631.md  RECORDING_SUMMARY_20251023_192941.md  RECORDING_SUMMARY_20251023_193323.md  (+10 more)
(+1036 files in other folders)
